--- a/form.html
+++ b/form.html
@@ -15,6 +15,11 @@
                border: solid 1px black;
                border-radius: 5px;
             }
+            body{
+                background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6xnmeT0hxYpRMK1ag1jCK3sEpTMk7PSKnMA&s);
+                background-repeat: no-repeat;  
+               background-size: cover;
+            }
         </style>
     </head>
     <body>
