--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
             div{
                 padding-bottom: 20px;
                 text-align: center;
+                
             }
             .a{
                 margin-left: 500px;
@@ -12,8 +13,9 @@
                background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6xnmeT0hxYpRMK1ag1jCK3sEpTMk7PSKnMA&s);
                background-repeat: no-repeat;  
                background-size: cover;
-               border: solid 1px black;
-               border-radius: 5px;
+               border: solid 0px black;
+               border-radius: 10px;
+               margin-top: 100px;
             }
             body{
                 background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6xnmeT0hxYpRMK1ag1jCK3sEpTMk7PSKnMA&s);
