--- a/resume.html
+++ b/resume.html
@@ -120,7 +120,7 @@
                 <li> Telugu-Native</li>
                 </ul>
             </div>
-            <div >   
+            <div class="declaration">   
                 <h3>Declaration</h3>
                 <P>
                     I hereby declare that the above information is true and correct to the best of my knowledge. 
