--- a/flex.html
+++ b/flex.html
@@ -77,7 +77,6 @@
             height: 100px;
         }
         .aa{
-            background-color: ;
             width: 100px;
             height: 100px;
             border: solid 1px black;
@@ -124,6 +123,17 @@
         <div class="cc">9</div>
     </div>
     </div>
+    
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     
 </body>
 </html>
